<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/appBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/movie_poster"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="#FFF"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/favourite_movie_white"
        app:layout_anchor="@id/appBarLayout"
        android:layout_marginRight="48dp"
        app:srcCompat="@drawable/ic_star"
        app:layout_anchorGravity="bottom|right|end"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/favourite_movie_yellow"
        app:layout_anchor="@id/appBarLayout"
        android:layout_marginRight="48dp"
        app:srcCompat="@drawable/ic_star_yellow"
        android:visibility="gone"
        app:layout_anchorGravity="bottom|right|end"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_padding">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/imageview_detail_gap"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_padding">

                    <!-- Heading release date -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/heading_released_on" />

                    <!-- Release date -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/release_date"
                        android:textColor="@color/textColorSecondary" />

                    <!-- Divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        android:layout_marginTop="@dimen/divider_gap"
                        android:layout_marginBottom="@dimen/divider_gap" />

                    <!-- Heading Rating -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/heading_rating" />

                    <!-- Rating -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rating"
                        android:textColor="@color/textColorSecondary" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_gap"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_padding">

                    <!-- Plot heading -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/heading_plot" />

                    <!-- Synopsis of the movie -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/plot"
                        android:textColor="@color/textColorSecondary" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <include layout="@layout/movie_video"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_gap"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/review_container"
                    android:padding="@dimen/layout_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/review_heading"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorPrimary"
                        android:text="@string/heading_reviews"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>